--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -30,38 +30,64 @@
 
 @keyframes starShine1 {
     0% {
-        box-shadow: 0px 0px 0px 0px rgba($white, 0.7);
+        box-shadow: 0px 0px 1px 1px rgba($white, 0.7);
     }
 
     50% {
-        box-shadow: 0px 0px 2px 2px rgba($lightBlue, 0.5);
+        box-shadow: 0px 0px 2px 2px rgba($lightBlue, 0.7);
     }
 
     100% {
-        box-shadow: 0px 0px 0px 0px rgba($white, 0.7);
+        box-shadow: 0px 0px 1px 1px rgba($white, 0.7);
     }
 }
 
 @keyframes starShine2 {
     0% {
-        box-shadow: 0px 0px 0px 0px rgba($yellow, 0.7);
+        box-shadow: 0px 0px 1px 1px rgba($yellow, 0.7);
     }
 
     50% {
-        box-shadow: 0px 0px 2px 2px rgba($lightYellow, 0.5);
+        box-shadow: 0px 0px 2px 2px rgba($lightYellow, 0.7);
     }
 
     100% {
-        box-shadow: 0px 0px 0px 0px rgba($yellow, 0.7);
+        box-shadow: 0px 0px 1px 1px rgba($yellow, 0.7);
     }
 }
 
 @keyframes starShine3 {
     0% {
-        box-shadow: 0px 0px 2px 2px rgba($white, 0.7);
+        box-shadow: 0px 0px 1px 1px rgba($yellow, 0.7);
+    }
+
+    50% {
+        box-shadow: 0px 0px 2px 2px rgba($red, 0.7);
+        background-color: $red;
+    }
+
+    100% {
+        box-shadow: 0px 0px 1px 1px rgba($yellow, 0.7);
+    }
+}
+
+@keyframes starShine4 {
+    0% {
+        box-shadow: 0px 0px 2px 2px rgba($white, 0.5);
     }
 
     100% {
         box-shadow: none;
+    }
+}
+
+@keyframes cometMove {
+    0% {
+        left: -10vw;
+    }
+
+    100% {
+        left: 110vw;
+        top: 20vh;
     }
 }
