--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "_variables.scss";
+@import "_extension.scss";
 @import "_animations.scss";
 @import "_resetCSS.scss";
 
@@ -54,19 +55,34 @@
     }
 
     .stars .star {
-        position: absolute;
-        width: $star;
-        height: $star;
-        border-radius: 1px;
-        background-color: $white;
-        z-index: 1;
+        @extend %starStyle;
+
+        @for $i from 1 through 50 {
+            &:nth-child(#{$i}) {
+                left: random(100) + vw;
+                top: random(60) + vh;
+                animation: starShine+random(4) random(5)+s linear infinite;
+            }
+        }
     }
 
-    @for $i from 1 through 50 {
-        .star:nth-child(#{$i}) {
-            left: random(100) + vw;
-            top: random(60) + vh;
-            animation: starShine+random(3) random(5)+s linear infinite;
+    .comets .comet {
+        @extend %starStyle;
+        background-color: $yellow;
+        box-shadow: -2px 0px 2px 2px rgba($white, 0.8),
+            -4px 0px 2px 2px rgba($white, 0.7),
+            -6px 0px 2px 2px rgba($white, 0.6),
+            -8px 0px 2px 2px rgba($white, 0.5),
+            -10px 0px 2px 2px rgba($white, 0.4),
+            -12px 0px 2px 2px rgba($white, 0.3),
+            -14px 0px 2px 2px rgba($white, 0.2),
+            -16px 0px 2px 2px rgba($white, 0.1);
+
+        @for $i from 1 through 3 {
+            &:nth-child(#{$i}) {
+                top: random(30) + vh;
+                animation: cometMove random(7)+3+s linear infinite;
+            }
         }
     }
 }
