--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
-@import "_variables.scss";
-@import "_extension.scss";
-@import "_animations.scss";
 @import "_resetCSS.scss";
+@import "_variables.scss";
+@import "_extensions.scss";
+@import "_animations.scss";
 
 .backgroundMoonlight {
     position: absolute;
@@ -55,7 +55,7 @@
     }
 
     .stars .star {
-        @extend %starStyle;
+        @extend %starCometStyle;
 
         @for $i from 1 through 50 {
             &:nth-child(#{$i}) {
@@ -67,22 +67,23 @@
     }
 
     .comets .comet {
-        @extend %starStyle;
+        @extend %starCometStyle;
+        @extend %cometShadow;
         background-color: $yellow;
-        box-shadow: -2px 0px 2px 2px rgba($white, 0.8),
-            -4px 0px 2px 2px rgba($white, 0.7),
-            -6px 0px 2px 2px rgba($white, 0.6),
-            -8px 0px 2px 2px rgba($white, 0.5),
-            -10px 0px 2px 2px rgba($white, 0.4),
-            -12px 0px 2px 2px rgba($white, 0.3),
-            -14px 0px 2px 2px rgba($white, 0.2),
-            -16px 0px 2px 2px rgba($white, 0.1);
 
         @for $i from 1 through 3 {
             &:nth-child(#{$i}) {
-                top: random(30) + vh;
-                animation: cometMove random(7)+3+s linear infinite;
+                top: random(10)+vh;
+                animation: cometAnimation+#{$i} random(7)+3+s linear infinite;
             }
         }
+    }
+
+    .comets .reverseComet {
+        @extend %starCometStyle;
+        @extend %ReverseCometShadow;
+        background-color: $white;
+        top: random(15)+vh;
+        animation: reverseCometAdnimation random(7)+3+s linear infinite;
     }
 }
