--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -16,70 +16,39 @@
 
 @keyframes moonMovment {
     0% {
-        left: -10vw;
-        top: 70%;
+        transform: translate(-10vw, 35vh);
     }
 
     50% {
-        top: 45%;
+        transform: translate(45vw, 15vh);
     }
 
     100% {
-        left: 110vw;
-        top: 70%;
+        transform: translate(110vw, 35vh);
     }
 }
 
 @keyframes starShine1 {
-    0% {
-        box-shadow: 0px 0px 1px 1px rgba($white, 0.7);
+    from {
+        opacity: 1;
     }
 
-    50% {
-        box-shadow: 0px 0px 2px 2px rgba($lightBlue, 0.7);
-    }
-
-    100% {
-        box-shadow: 0px 0px 1px 1px rgba($white, 0.7);
+    to {
+        opacity: 0.3;
     }
 }
 
 @keyframes starShine2 {
     0% {
-        box-shadow: 0px 0px 1px 1px rgba($yellow, 0.7);
+        opacity: 1;
     }
 
-    50% {
-        box-shadow: 0px 0px 2px 2px rgba($lightYellow, 0.7);
-    }
-
-    100% {
-        box-shadow: 0px 0px 1px 1px rgba($yellow, 0.7);
-    }
-}
-
-@keyframes starShine3 {
-    0% {
-        box-shadow: 0px 0px 1px 1px rgba($yellow, 0.7);
-    }
-
-    50% {
-        box-shadow: 0px 0px 2px 2px rgba($red, 0.7);
-        background-color: $red;
+    50%{
+        opacity: 0;
     }
 
     100% {
-        box-shadow: 0px 0px 1px 1px rgba($yellow, 0.7);
-    }
-}
-
-@keyframes starShine4 {
-    0% {
-        box-shadow: 0px 0px 2px 2px rgba($white, 0.5);
-    }
-
-    100% {
-        box-shadow: none;
+        opacity: 1;
     }
 }
 
@@ -90,3 +59,13 @@
 @include randomComet(cometAnimation3, random(100)+100, random(40));
 
 @include randomComet(reverseCometAdnimation, (random(100)+100)*(-1), random(40));
+
+@keyframes cloudMovment {
+    0% {
+        
+    }
+
+    100% {
+        transform: translateX(110vw);
+    }
+}
