--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,14 +8,20 @@ $blue: #457b9d;
 $lightBlue: #a8dadc;
 $yellow: #ffc300;
 $lightYellow: #ffd60a;
+$brown: #7f5539;
+$darkGrey: #343a40;
+$grey: #495057;
+$lightGrey: #6c757d;
 
 $moon: 6vw;
 $moonShine: calc($moon / 4);
-$moonShineTime: 3s;
-$moonMovmentTime: 15s;
+$moonShineTime: 12s;
+$moonMovmentTime: 120s;
 
 $star: 1px;
 
 $mountain: 100vh;
 $smallMountain: calc($mountain / 2);
 $mountainRadius: 25px;
+
+$cloud: 100px;
