--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -43,7 +43,7 @@
         opacity: 1;
     }
 
-    50%{
+    50% {
         opacity: 0;
     }
 
@@ -61,11 +61,9 @@
 @include randomComet(reverseCometAdnimation, (random(100)+100)*(-1), random(40));
 
 @keyframes cloudMovment {
-    0% {
-        
-    }
+    0% {}
 
     100% {
-        transform: translateX(110vw);
+        transform: translateX(160vw);
     }
 }
