--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,12 +8,11 @@ $blue: #457b9d;
 $lightBlue: #a8dadc;
 $yellow: #ffc300;
 $lightYellow: #ffd60a;
-$brown: #7f5539;
 $darkGrey: #343a40;
 $grey: #495057;
 $lightGrey: #6c757d;
 
-$moon: 6vw;
+$moon: 100px;
 $moonShine: calc($moon / 4);
 $moonMovmentTime: 90s;
 $moonShineTime: 4s;
