--- a/SASS-version/sass/style.sass
+++ b/SASS-version/sass/style.sass
@@ -1,4 +1,8 @@
-@import _resetCSS.sass, _variables.sass, _extensions.sass, _animations.sass, _functions.sass
+@use "_resetCSS.sass" as *
+@use "_variables.sass" as *
+@use "_extensions.sass" as *
+@use "_animations.sass" as *
+@use "_functions.sass" as *
 
 .backgroundMoonlight
     position: absolute
