--- a/SCSS-version/scss/style.scss
+++ b/SCSS-version/scss/style.scss
@@ -1,8 +1,8 @@
-@import "_resetCSS.scss";
-@import "_variables.scss";
-@import "_extensions.scss";
-@import "_animations.scss";
-@import "_functions.scss";
+@use "_resetCSS.scss" as *;
+@use "_variables.scss" as *;
+@use "_extensions.scss" as *;
+@use "_animations.scss" as *;
+@use "_functions.scss" as *;
 
 .backgroundMoonlight {
     position: absolute;
